--- a/views/servicios.html
+++ b/views/servicios.html
@@ -64,7 +64,7 @@
         </nav>                 
     </header>
     <section>
-      <div class="container principal">
+      <div class="container-fluid principal">
         <div class="row">
           <div class="col-lg-12 text-center">
             <div class="row">
