--- a/views/servicios.html
+++ b/views/servicios.html
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class=" p-3 mb-5 mt-4 " data-aos="fade-up-left">
+            <div class=" p-3 mb-5 mt-4 " data-aos="flip-left">
               <img src="/Img/reparando-data-center.jpg" class="img-fluid" alt="Trabajando en un data center">
             </div>
           </div>
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="p-3 mb-5 mt-4" data-aos="fade-up-left">
+            <div class="p-3 mb-5 mt-4" data-aos="flip-left">
               <img src="/Img/network-switch-with-cables.jpg" class="img-fluid" alt="switch conectado">
             </div>
           </div>
@@ -165,7 +165,7 @@
           <div class="col-md-6">
             <div class="mb-5 mt-4 ">
               <div class="container-fluid">
-                <div class="row" data-aos="fade-down-right">
+                <div class="row" data-aos="flip-left">
                   <div class="monitoreo-galeria">
                     <div class="col-md-3 p-3 mb-3 mt-3 ">
                       <img src="/Img/Nagios.jpg" class="" alt="Sistema de monitoreo Nagios ">
@@ -174,7 +174,7 @@
                       <img src="/Img/zabbix.png" class="" alt="Sistema de monitoreo Zabbix">
                     </div>
                   </div>
-                  <div class="row" data-aos="fade-down-right">
+                  <div class="row" data-aos="flip-left">
                     <div class="monitoreo-galeria">
                       <div class="col-md-3 p-3  mt-3">
                         <img src="/Img/cacti.png" class="" alt="Sistema de monitoreo Cacti">
