--- a/views/paginaEnIgles.html
+++ b/views/paginaEnIgles.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English Page - Servicios Virtuales</title>
+    <link rel="icon" type="img/css" href="/Img/robot-logo.jpg">
     <meta name="description" content="Servicios Virtuales realizamos relevamientos de toda la red 
         para crear, diseñar y desarrollar sistemas de monitoreos para evaluar los recursos y el desempeño 
         de cada dispositivo.  Zabbix, Nagios, Cacti.">
